--- a/contact.html
+++ b/contact.html
@@ -20,9 +20,9 @@
         </div>
 
         <nav>
-            <a href="./index.html">Home</a>
+            <a href="./main.html">Home</a>
             <a href="./shop.html">Shop</a>
-            <a href="./main.html"><img src="./assets/Monogram vector.jpg" alt=""></a>
+            <a href="./index.html"><img src="./assets/Monogram vector.jpg" alt=""></a>
             <a href="./gallery.html">Gallery</a>
             <a href="./contact.html">Contact</a>
         
@@ -34,7 +34,7 @@
             <i class="fa-sharp fa-solid fa-x"></i>
         </div>
         <div class="menu-wrapper">
-            <a class="menu-item" href="./index.html">Home</a>
+            <a class="menu-item" href="./main.html">Home</a>
             <a class="menu-item" href="./shop.html">Shop</a>
             <a class="menu-item" href="./gallery.html">Gallery</a>
             <a class="menu-item" data-close>Contact</a>
