added new video

--- a/main.html
+++ b/main.html
@@ -44,7 +44,7 @@
 
 
         <div class="container video-bg">
-            <video autoplay muted loop id="myVideo" src="./assets/short.mp4"></video>   
+            <video autoplay muted loop id="myVideo" src="./assets/newVideo2.mp4"></video>   
         </div> 
 
         <div class="container gallery-home">
