--- a/contact.html
+++ b/contact.html
@@ -22,7 +22,7 @@
         <nav>
             <a href="./main.html">Home</a>
             <a href="./shop.html">Shop</a>
-            <a href="./index.html"><img src="./assets/Monogram vector.jpg" alt=""></a>
+            <a href="./index.html"><img src="./assets/Photoleap_App_RemoveBg_247589.png" alt=""></a>
             <a href="./gallery.html">Gallery</a>
             <a href="./contact.html">Contact</a>
         
