--- a/gallery.html
+++ b/gallery.html
@@ -36,8 +36,8 @@
     <div class="menu-wrapper">
         <a class="menu-item" href="./main.html">Home</a>
         <a class="menu-item" href="./shop.html">Shop</a>
-        <a class="menu-item" href="./gallery.html">Gallery</a>
-        <a class="menu-item" data-close>Contact</a>
+        <a class="menu-item" data-close >Gallery</a>
+        <a class="menu-item" href="./contact.html" >Contact</a>
     </div>
 </div>
 
