--- a/main.html
+++ b/main.html
@@ -33,9 +33,10 @@
      
     
    
+        <div class="divider-top"></div>
 
         <div class="container video-bg">
-            <video autoplay muted loop id="myVideo" src="./assets/short.mp4"></video>   
+            <video autoplay muted loop id="myVideo" src="./assets/short.mp4" type="video/mp4"></video>   
         </div> 
 
         <div class="container gallery-home">
